--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -89,7 +89,7 @@
     "now = date0 + datetime.timedelta(hours=11.1)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
-    "    recall = ebisu.recallProbabilityMean(*row['params'], (now - row['lastTest']) / oneHour)\n",
+    "    recall = ebisu.predictRecall(*row['params'], (now - row['lastTest']) / oneHour)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))\n"
    ]
   },
@@ -123,7 +123,7 @@
     "now = date0 + datetime.timedelta(hours=26.5)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
-    "    recall = ebisu.recallProbabilityMean(*row['params'], (now - row['lastTest']) / oneHour)\n",
+    "    recall = ebisu.predictRecall(*row['params'], (now - row['lastTest']) / oneHour)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))"
    ]
   },
@@ -151,7 +151,7 @@
     "row = database[0]\n",
     "\n",
     "result = True\n",
-    "newParams = ebisu.posteriorAnalytic(*row['params'],\n",
+    "newParams = ebisu.updateRecall(*row['params'],\n",
     "                                    1.0 if result else 0.0,\n",
     "                                    (now - row['lastTest']) / oneHour)\n",
     "print(newParams)\n",
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ebisu.posteriorAnalytic` takes the current parameters, the quiz result, and the time elapsed since the last quiz, and provides a new 3-tuple of parameters. We update these parameters and also touch the `lastSeen` timestamp.\n",
+    "`ebisu.updateRecall` takes the current parameters, the quiz result, and the time elapsed since the last quiz, and provides a new 3-tuple of parameters. We update these parameters and also touch the `lastSeen` timestamp.\n",
     "\n",
     "Suppose the student asks to review another fact, fact 2. It was learned earlier that morning, and its recall probability is expected to be around 63% but suppose the student fails this quiz, as sometimes happens."
    ]
@@ -185,7 +185,7 @@
     "row = database[1]\n",
     "\n",
     "result = False\n",
-    "newParams = ebisu.posteriorAnalytic(*row['params'],\n",
+    "newParams = ebisu.updateRecall(*row['params'],\n",
     "                                    1.0 if result else 0.0,\n",
     "                                    (now - row['lastTest']) / oneHour)\n",
     "print(newParams)\n",
@@ -229,8 +229,8 @@
     "Note how the half-life (the time between quizzes for expected recall probability to drop to 50%) for the first question increased from 24 to 29 hours after the student got it right, while it decreased to 20 hours for the second when she got it wrong. Ebisu has incorporated the fact that the second fact had been learned not that long ago and should have been strong, and uses the surprising quiz result to strongly adjust its belief about its recall probability.\n",
     "\n",
     "This short notebook shows the major functions in the Ebisu API:\n",
-    "- `ebisu.recallProbabilityMean` to find out the expected recall probability for a fact right now, and\n",
-    "- `ebisu.posteriorAnalytic` to update those expectations when a new quiz result is available.\n",
+    "- `ebisu.predictRecall` to find out the expected recall probability for a fact right now, and\n",
+    "- `ebisu.updateRecall` to update those expectations when a new quiz result is available.\n",
     "- (`ebisu.priorToHalflife` is a helper function that can be used to gain insight into the algorithm but likely should not be used in production.)"
    ]
   }
