--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import ebisu\n",
     "\n",
-    "defaultParams = (4., 4., 24.) # alpha, beta, and half-life in hours"
+    "defaultModel = (4., 4., 24.) # alpha, beta, and half-life in hours"
    ]
   },
   {
@@ -57,8 +57,8 @@
     "import datetime\n",
     "date0 = datetime.datetime(2017, 4, 19, 22, 0, 0)\n",
     "\n",
-    "database = [dict(factID=1, params=defaultParams, lastTest=date0),\n",
-    "            dict(factID=2, params=defaultParams, lastTest=date0 + datetime.timedelta(hours=11))]"
+    "database = [dict(factID=1, model=defaultModel, lastTest=date0),\n",
+    "            dict(factID=2, model=defaultModel, lastTest=date0 + datetime.timedelta(hours=11))]"
    ]
   },
   {
@@ -89,7 +89,8 @@
     "now = date0 + datetime.timedelta(hours=11.1)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
-    "    recall = ebisu.predictRecall(*row['params'], (now - row['lastTest']) / oneHour)\n",
+    "    recall = ebisu.predictRecall(row['model'],\n",
+    "                                 (now - row['lastTest']) / oneHour)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))\n"
    ]
   },
@@ -123,7 +124,8 @@
     "now = date0 + datetime.timedelta(hours=26.5)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
-    "    recall = ebisu.predictRecall(*row['params'], (now - row['lastTest']) / oneHour)\n",
+    "    recall = ebisu.predictRecall(row['model'],\n",
+    "                                 (now - row['lastTest']) / oneHour)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))"
    ]
   },
@@ -151,11 +153,11 @@
     "row = database[0]\n",
     "\n",
     "result = True\n",
-    "newParams = ebisu.updateRecall(*row['params'],\n",
-    "                                    1.0 if result else 0.0,\n",
-    "                                    (now - row['lastTest']) / oneHour)\n",
-    "print(newParams)\n",
-    "row['params'] = tuple(newParams)\n",
+    "newModel = ebisu.updateRecall(row['model'],\n",
+    "                              1.0 if result else 0.0,\n",
+    "                              (now - row['lastTest']) / oneHour)\n",
+    "print(newModel)\n",
+    "row['model'] = newModel\n",
     "row['lastTest'] = now"
    ]
   },
@@ -177,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6.6413922178601688, 4.8903629621007454, 15.5)\n"
+      "(6.641392217859198, 4.8903629621000055, 15.5)\n"
      ]
     }
    ],
@@ -185,11 +187,11 @@
     "row = database[1]\n",
     "\n",
     "result = False\n",
-    "newParams = ebisu.updateRecall(*row['params'],\n",
-    "                                    1.0 if result else 0.0,\n",
-    "                                    (now - row['lastTest']) / oneHour)\n",
-    "print(newParams)\n",
-    "row['params'] = tuple(newParams)\n",
+    "newModel = ebisu.updateRecall(row['model'],\n",
+    "                              1.0 if result else 0.0,\n",
+    "                              (now - row['lastTest']) / oneHour)\n",
+    "print(newModel)\n",
+    "row['model'] = newModel\n",
     "row['lastTest'] = now"
    ]
   },
@@ -218,7 +220,7 @@
    ],
    "source": [
     "for row in database:\n",
-    "    meanHalflife, varHalflife = ebisu.priorToHalflife(*row['params'])\n",
+    "    meanHalflife, varHalflife = ebisu.priorToHalflife(row['model'])\n",
     "    print(\"Fact #{} has half-life of ≈{:0.1f} hours\".format(row['factID'], meanHalflife))\n"
    ]
   },
