Update explanation in Notebook.

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Ebisu is a library that’s expected to be embedded inside quiz apps, to help schedule quizzes intelligently. It uses Bayesian statistics to let the app predict what the recall probability is for any fact that the student has learned, and to update that prediction based onthe results of a quiz.\n",
     "\n",
-    "Ebisu uses three numbers to describe its belief about the time-evolution of each fact’s recall probability. For simplicity, we’ll store them as a 3-tuple:\n",
+    "Ebisu uses three numbers to describe its belief about the time-evolution of each fact’s recall probability. Its API consumes them as a 3-tuple, and they are:\n",
     "\n",
     "- the first we call “alpha” and must be ≥ 2 (well, technically, ≥1 is the raw minimum but unless you’re a professor of statistics, keep it more than two);\n",
     "- the second is “beta” and also must be ≥ 2. These two numbers encode our belief about the distribution of recall probabilities at\n",
@@ -54,11 +54,11 @@
    },
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "date0 = datetime.datetime(2017, 4, 19, 22, 0, 0)\n",
+    "from datetime import datetime, timedelta\n",
+    "date0 = datetime(2017, 4, 19, 22, 0, 0)\n",
     "\n",
     "database = [dict(factID=1, model=defaultModel, lastTest=date0),\n",
-    "            dict(factID=2, model=defaultModel, lastTest=date0 + datetime.timedelta(hours=11))]"
+    "            dict(factID=2, model=defaultModel, lastTest=date0 + timedelta(hours=11))]"
    ]
   },
   {
@@ -84,9 +84,9 @@
     }
    ],
    "source": [
-    "oneHour = datetime.timedelta(hours=1)\n",
+    "oneHour = timedelta(hours=1)\n",
     "\n",
-    "now = date0 + datetime.timedelta(hours=11.1)\n",
+    "now = date0 + timedelta(hours=11.1)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
     "    recall = ebisu.predictRecall(row['model'],\n",
@@ -99,6 +99,12 @@
    "metadata": {},
    "source": [
     "Both facts are expected to still be firmly in memory—especially the second one since it was just learned! So the quiz app doesn’t ask the student to review anything yet—though if she wanted to, the quiz app would pick the fact most in danger of being forgotten.\n",
+    "\n",
+    "Note how we used `ebisu.predictRecall`, which accepts\n",
+    "- the current model, and\n",
+    "- the time elapsed since this fact’s last quiz,\n",
+    "\n",
+    "and returns a `float`.\n",
     "\n",
     "…\n",
     "\n",
@@ -121,7 +127,7 @@
     }
    ],
    "source": [
-    "now = date0 + datetime.timedelta(hours=26.5)\n",
+    "now = date0 + timedelta(hours=26.5)\n",
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
     "    recall = ebisu.predictRecall(row['model'],\n",
@@ -145,18 +151,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4.5378355185171504, 4.0191721089498333, 26.5)\n"
+      "New model for fact #1: (4.5378355185171504, 4.0191721089498333, 26.5)\n"
      ]
     }
    ],
    "source": [
-    "row = database[0]\n",
+    "row = database[0] # review FIRST question\n",
     "\n",
     "result = True\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
     "                              1.0 if result else 0.0,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
-    "print(newModel)\n",
+    "print('New model for fact #1:', newModel)\n",
     "row['model'] = newModel\n",
     "row['lastTest'] = now"
    ]
@@ -165,9 +171,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ebisu.updateRecall` takes the current parameters, the quiz result, and the time elapsed since the last quiz, and provides a new 3-tuple of parameters. We update these parameters and also touch the `lastSeen` timestamp.\n",
+    "Observe how `ebisu.updateRecall` takes\n",
+    "- the current model,\n",
+    "- the quiz result, and\n",
+    "- the time elapsed since the last quiz,\n",
     "\n",
-    "Suppose the student asks to review another fact, fact 2. It was learned earlier that morning, and its recall probability is expected to be around 63% but suppose the student fails this quiz, as sometimes happens."
+    "and returns a new model (the new 3-tuple of “alpha”, “beta” and time). We put the new model and the current timestamp into the database.\n",
+    "\n",
+    "Now. Suppose the student asks to review another fact—fact 2. It was learned just earlier that morning, and its recall probability is expected to be around 63%, but suppose the student fails this quiz, as sometimes happens."
    ]
   },
   {
@@ -179,18 +190,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6.641392217859198, 4.8903629621000055, 15.5)\n"
+      "New model for fact #2: (6.641392217859198, 4.8903629621000055, 15.5)\n"
      ]
     }
    ],
    "source": [
-    "row = database[1]\n",
+    "row = database[1] # review SECOND question\n",
     "\n",
     "result = False\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
     "                              1.0 if result else 0.0,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
-    "print(newModel)\n",
+    "print('New model for fact #2:', newModel)\n",
     "row['model'] = newModel\n",
     "row['lastTest'] = now"
    ]
