Minor clarification in notebook.

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "- the first we call “alpha” and must be ≥ 2 (well, technically, ≥1 is the raw minimum but unless you’re a professor of statistics, keep it more than two);\n",
     "- the second is “beta” and also must be ≥ 2. These two numbers encode our belief about the distribution of recall probabilities at\n",
-    "- the third element, which we call a half-life. This has units of time, and for this example, we’ll assume it’s in hours. It can be any positive float, but we choose the nice round number of 24 hours.\n",
+    "- the third element, which here is a half-life. This has units of time, and for this example, we’ll assume it’s in hours. It can be any positive float, but we choose the nice round number of 24 hours.\n",
     "\n",
-    "For the nerds: alpha and beta parameterize a Beta distribution to describe our prior belief of the recall probability half-life’s worth of time has elapsed since the last quiz.\n",
+    "For the nerds: alpha and beta parameterize a Beta distribution to describe our prior belief of the recall probability one half-life (one day) after a fact’s most recent quiz.\n",
     "\n",
     "For the rest of us: these three numbers mean we expect the recall probability for a newly-learned fact to be 50% after one day, but allow uncertainty: the recall probability after a day is “around” 42% to 58% (±1 standard deviation).\n",
     "\n",
