Fix #2: old priorToHalflife API being used

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #1: (4.5378355185171504, 4.0191721089498333, 26.5)\n"
+      "New model for fact #1: (4.537835518517152, 4.019172108949835, 26.5)\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
    ],
    "source": [
     "for row in database:\n",
-    "    meanHalflife, varHalflife = ebisu.priorToHalflife(row['model'])\n",
+    "    meanHalflife = ebisu.priorToHalflife(row['model'])\n",
     "    print(\"Fact #{} has half-life of ≈{:0.1f} hours\".format(row['factID'], meanHalflife))\n"
    ]
   },
@@ -264,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
