Improve tutorial Notebook

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ebisu\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
@@ -90,7 +86,8 @@
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
     "    recall = ebisu.predictRecall(row['model'],\n",
-    "                                 (now - row['lastTest']) / oneHour)\n",
+    "                                 (now - row['lastTest']) / oneHour,\n",
+    "                                 exact=True)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))\n"
    ]
   },
@@ -131,7 +128,8 @@
     "print(\"On {},\".format(now))\n",
     "for row in database:\n",
     "    recall = ebisu.predictRecall(row['model'],\n",
-    "                                 (now - row['lastTest']) / oneHour)\n",
+    "                                 (now - row['lastTest']) / oneHour,\n",
+    "                                 exact=True)\n",
     "    print(\"Fact #{} probability of recall: {:0.1f}%\".format(row['factID'], recall * 100))"
    ]
   },
@@ -151,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #1: (4.537835518517152, 4.019172108949835, 26.5)\n"
+      "New model for fact #1: (5.104166666666667, 4.0, 23.999999999999996)\n"
      ]
     }
    ],
@@ -190,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #2: (6.641392217859198, 4.8903629621000055, 15.5)\n"
+      "New model for fact #2: (4.0, 5.028175886669166, 23.51913042922726)\n"
      ]
     }
    ],
@@ -231,7 +229,7 @@
    ],
    "source": [
     "for row in database:\n",
-    "    meanHalflife = ebisu.priorToHalflife(row['model'])\n",
+    "    meanHalflife = ebisu.modelToPercentileDecay(row['model'])\n",
     "    print(\"Fact #{} has half-life of ≈{:0.1f} hours\".format(row['factID'], meanHalflife))\n"
    ]
   },
@@ -244,7 +242,49 @@
     "This short notebook shows the major functions in the Ebisu API:\n",
     "- `ebisu.predictRecall` to find out the expected recall probability for a fact right now, and\n",
     "- `ebisu.updateRecall` to update those expectations when a new quiz result is available.\n",
-    "- (`ebisu.priorToHalflife` is a helper function that can be used to gain insight into the algorithm but likely should not be used in production.)"
+    "- `ebisu.modelToPercentileDecay` to find the time when the recall probability reaches a certain value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adanced topics\n",
+    "### Speeding up `predictRecall`\n",
+    "\n",
+    "Above, we used `predictRecall` with the `exact=True` keyword argument to have it return true probabilities. We can reduce runtime if we use the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.76 µs ± 689 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "5.5 µs ± 444 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As above: slow!\n",
+    "%timeit ebisu.predictRecall(database[0]['model'], 100., exact=True)\n",
+    "\n",
+    "# Cache a value using the `cacheIndependent` helper, and allow `exact=False` (the default):\n",
+    "independent = ebisu.cacheIndependent(database[0]['model'])\n",
+    "%timeit ebisu.predictRecall(database[0]['model'], 100., independent=independent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "By "
    ]
   }
  ],
