Fix #12: use 1.0 API for predictRecall

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #1: (5.104166666666667, 4.0, 23.999999999999996)\n"
+      "New model for fact #1: (5.104166666666667, 4.0, 24.0)\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #2: (4.0, 5.028175886669166, 23.51913042922726)\n"
+      "New model for fact #2: (3.897259022777522, 5.034512196073532, 24.0)\n"
      ]
     }
    ],
@@ -257,25 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.76 µs ± 689 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "5.5 µs ± 444 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "5.95 µs ± 203 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "4.31 µs ± 204 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "# As above: slow!\n",
+    "# As above: a bit slow to get exact probabilities\n",
     "%timeit ebisu.predictRecall(database[0]['model'], 100., exact=True)\n",
     "\n",
-    "# Cache a value using the `cacheIndependent` helper, and allow `exact=False` (the default):\n",
-    "independent = ebisu.cacheIndependent(database[0]['model'])\n",
-    "%timeit ebisu.predictRecall(database[0]['model'], 100., independent=independent)"
+    "# A bit faster alternative: get log-probabilities (this is the defa)\n",
+    "%timeit ebisu.predictRecall(database[0]['model'], 100., exact=False)"
    ]
   },
   {
