Use booleans in Notebook demo of updateRecall

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose the quiz app has been configured to quiz the student if the expected recall probability drops below 50%—which it did for fact 1! Let the result of the quiz be 1.0 if passed and 0.0 if failed."
+    "Suppose the quiz app has been configured to quiz the student if the expected recall probability drops below 50%—which it did for fact 1! Let the result of the quiz be `True` if passed and `False` if failed."
    ]
   },
   {
@@ -158,7 +158,7 @@
     "\n",
     "result = True\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
-    "                              1.0 if result else 0.0,\n",
+    "                              result,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
     "print('New model for fact #1:', newModel)\n",
     "row['model'] = newModel\n",
@@ -197,7 +197,7 @@
     "\n",
     "result = False\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
-    "                              1.0 if result else 0.0,\n",
+    "                              result,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
     "print('New model for fact #2:', newModel)\n",
     "row['model'] = newModel\n",
@@ -257,15 +257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.95 µs ± 203 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "4.31 µs ± 204 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "6.42 µs ± 461 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "4 µs ± 53 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -275,15 +275,6 @@
     "\n",
     "# A bit faster alternative: get log-probabilities (this is the defa)\n",
     "%timeit ebisu.predictRecall(database[0]['model'], 100., exact=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "By "
    ]
   }
  ],
@@ -303,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
