Update Notebook to 2.0.0

--- a/EbisuHowto.ipynb
+++ b/EbisuHowto.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose the quiz app has been configured to quiz the student if the expected recall probability drops below 50%—which it did for fact 1! Let the result of the quiz be `True` if passed and `False` if failed."
+    "Suppose the quiz app has been configured to quiz the student if the expected recall probability drops below 50%—which it did for fact 1! The app shows the flashcard once, analyzes the user's response, and sets the result of the quiz to `1` if passed and `0` if failed. It calls Ebisu to update the model, giving it this result as well as the `total` number of times it showed this flashcard (one time—Ebisu can support more advanced cases where an app reviews the same flashcard multiple times in a single review session, but let's keep it simple for now)."
    ]
   },
   {
@@ -149,16 +149,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #1: (5.104166666666667, 4.0, 24.0)\n"
+      "New model for fact #1: (5.104166666666623, 3.999999999999968, 24.0)\n"
      ]
     }
    ],
    "source": [
     "row = database[0] # review FIRST question\n",
     "\n",
-    "result = True\n",
+    "result = 1 # success!\n",
+    "total = 1 # number of times this flashcard was shown (fixed)\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
     "                              result,\n",
+    "                              total,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
     "print('New model for fact #1:', newModel)\n",
     "row['model'] = newModel\n",
@@ -188,16 +190,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New model for fact #2: (3.897259022777522, 5.034512196073532, 24.0)\n"
+      "New model for fact #2: (3.897259022777383, 5.0345121960734005, 24.0)\n"
      ]
     }
    ],
    "source": [
     "row = database[1] # review SECOND question\n",
     "\n",
-    "result = False\n",
+    "result = 0\n",
     "newModel = ebisu.updateRecall(row['model'],\n",
     "                              result,\n",
+    "                              total,\n",
     "                              (now - row['lastTest']) / oneHour)\n",
     "print('New model for fact #2:', newModel)\n",
     "row['model'] = newModel\n",
@@ -264,8 +267,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.42 µs ± 461 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "4 µs ± 53 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "6.82 µs ± 84.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "4.91 µs ± 235 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -294,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
